added footer to all page

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,8 +7,10 @@
     <title>About Us | Swin Security - Trusted Security Experts</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Learn about Swin Security – experts in CCTV, alarm systems, smart locks, and access control. Discover our mission, leadership, and certifications.">
-    <meta name="keywords" content="About Swin Security, security solutions, CCTV experts, alarm systems, smart locks, CEO, certifications">
+    <meta name="description"
+        content="Learn about Swin Security – experts in CCTV, alarm systems, smart locks, and access control. Discover our mission, leadership, and certifications.">
+    <meta name="keywords"
+        content="About Swin Security, security solutions, CCTV experts, alarm systems, smart locks, CEO, certifications">
     <meta name="author" content="Swin Security">
 
     <!-- Stylesheets -->
@@ -32,7 +34,8 @@
                     <i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a>
+                    </li>
                     <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
                     <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
                     <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
@@ -49,11 +52,14 @@
         <div class="about-page-hero-container">
             <div class="about-page-hero-content">
                 <h1>About <span style="color:#00bfff;">Swin Security</span></h1>
-                <p class="about-page-hero-subtext">Dedicated to safeguarding homes, businesses, and industries with cutting-edge security technology and personalized service.</p>
+                <p class="about-page-hero-subtext">Dedicated to safeguarding homes, businesses, and industries with
+                    cutting-edge security technology and personalized service.</p>
                 <div class="about-page-achievement-badges">
-                    <div class="about-page-badge"><i class="fas fa-briefcase"></i><span>8+ Years of Experience</span></div>
+                    <div class="about-page-badge"><i class="fas fa-briefcase"></i><span>8+ Years of Experience</span>
+                    </div>
                     <div class="about-page-badge"><i class="fas fa-award"></i><span>Certified Technicians</span></div>
-                    <div class="about-page-badge"><i class="fas fa-thumbs-up"></i><span>1000+ Projects Completed</span></div>
+                    <div class="about-page-badge"><i class="fas fa-thumbs-up"></i><span>1000+ Projects Completed</span>
+                    </div>
                 </div>
             </div>
             <div class="about-page-hero-image">
@@ -67,11 +73,14 @@
         <h2>Meet Our Founder & CEO</h2>
         <div class="ceo-container">
             <div class="ceo-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv5T9G-B_94Liv4WQ2W-ulYpOqYM_0Yq6su6KgzQEzHU1InT6k-xEMNQvydTUrtqcPQio&usqp=CAU" alt="CEO John Doe - Swin Security">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv5T9G-B_94Liv4WQ2W-ulYpOqYM_0Yq6su6KgzQEzHU1InT6k-xEMNQvydTUrtqcPQio&usqp=CAU"
+                    alt="CEO John Doe - Swin Security">
             </div>
             <div class="ceo-info">
                 <h3>John Doe</h3>
-                <p>John brings over two decades of leadership and hands-on experience in the security industry. His mission is to provide smart, scalable, and reliable protection for every client — whether residential, commercial, or industrial.</p>
+                <p>John brings over two decades of leadership and hands-on experience in the security industry. His
+                    mission is to provide smart, scalable, and reliable protection for every client — whether
+                    residential, commercial, or industrial.</p>
             </div>
         </div>
     </section>
@@ -79,13 +88,34 @@
     <!-- Certifications Section -->
     <section class="certificates-section">
         <h2>Our Certifications</h2>
-        <p class="cert-intro">We pride ourselves on being certified by leading authorities in security and automation technologies.</p>
+        <p class="cert-intro">We pride ourselves on being certified by leading authorities in security and automation
+            technologies.</p>
         <div class="certificates-container">
-            <div class="certificate-card"><div class="cert-icon">📜</div><h3>COA License</h3><p>Certified security technician license for trusted operations.</p></div>
-            <div class="certificate-card"><div class="cert-icon">🔒</div><h3>Inner Range Integriti</h3><p>Certified installer of advanced access systems.</p></div>
-            <div class="certificate-card"><div class="cert-icon">⚙️</div><h3>ICT Protoge GX</h3><p>Expertise in access control configurations and deployment.</p></div>
-            <div class="certificate-card"><div class="cert-icon">🛎️</div><h3>Paradox MG/SP</h3><p>Trained alarm system integration specialist.</p></div>
-            <div class="certificate-card"><div class="cert-icon">🏆</div><h3>Bosch Certified</h3><p>Approved installer of Bosch alarm technologies.</p></div>
+            <div class="certificate-card">
+                <div class="cert-icon">📜</div>
+                <h3>COA License</h3>
+                <p>Certified security technician license for trusted operations.</p>
+            </div>
+            <div class="certificate-card">
+                <div class="cert-icon">🔒</div>
+                <h3>Inner Range Integriti</h3>
+                <p>Certified installer of advanced access systems.</p>
+            </div>
+            <div class="certificate-card">
+                <div class="cert-icon">⚙️</div>
+                <h3>ICT Protoge GX</h3>
+                <p>Expertise in access control configurations and deployment.</p>
+            </div>
+            <div class="certificate-card">
+                <div class="cert-icon">🛎️</div>
+                <h3>Paradox MG/SP</h3>
+                <p>Trained alarm system integration specialist.</p>
+            </div>
+            <div class="certificate-card">
+                <div class="cert-icon">🏆</div>
+                <h3>Bosch Certified</h3>
+                <p>Approved installer of Bosch alarm technologies.</p>
+            </div>
         </div>
     </section>
 
@@ -122,7 +152,9 @@
             <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
         </div>
     </footer>
-
+    <div class="footer-company-text">
+        <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
+    </div>
     <script src="../js/main.js"></script>
 </body>
 
