--- a/pages/alarmsystem.html
+++ b/pages/alarmsystem.html
@@ -7,11 +7,13 @@
     <title>Alarm System | Swin Security</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Explore premium alarm systems from Ajax, DSC, Paradox, Bosch, and Risco at Swin Security. Advanced protection for homes and businesses.">
+    <meta name="description"
+        content="Explore premium alarm systems from Ajax, DSC, Paradox, Bosch, and Risco at Swin Security. Advanced protection for homes and businesses.">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Alarm System | Swin Security" />
-    <meta property="og:description" content="Discover reliable and modern alarm systems from leading brands like Ajax and Paradox. Protect your home or business with Swin Security." />
+    <meta property="og:description"
+        content="Discover reliable and modern alarm systems from leading brands like Ajax and Paradox. Protect your home or business with Swin Security." />
     <meta property="og:image" content="https://yoursite.com/images/alarmsystem-cover.jpg" />
     <meta property="og:url" content="https://yoursite.com/pages/alarmsystem.html" />
     <meta property="og:type" content="website" />
@@ -19,11 +21,13 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Alarm System | Swin Security" />
-    <meta name="twitter:description" content="Smart and scalable alarm systems by top brands. Ensure your security with Swin Security." />
+    <meta name="twitter:description"
+        content="Smart and scalable alarm systems by top brands. Ensure your security with Swin Security." />
     <meta name="twitter:image" content="https://yoursite.com/images/alarmsystem-cover.jpg" />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/critical.css" />
     <link rel="stylesheet" href="../css/style.css" />
 </head>
@@ -42,7 +46,8 @@
                     <i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a>
+                    </li>
                     <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
                     <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
                     <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
@@ -75,7 +80,9 @@
         <div class="alarmsystem-page-info-item">
             <div class="alarmsystem-page-info-text">
                 <h2>Ajax Alarm Systems</h2>
-                <p>Ajax offers cutting-edge wireless alarm systems with sleek designs and powerful features. It includes real-time mobile app notifications, motion detectors, and door sensors, making it ideal for modern residential and commercial spaces.</p>
+                <p>Ajax offers cutting-edge wireless alarm systems with sleek designs and powerful features. It includes
+                    real-time mobile app notifications, motion detectors, and door sensors, making it ideal for modern
+                    residential and commercial spaces.</p>
             </div>
             <div class="alarmsystem-page-info-image">
                 <img src="../images/AJAX alarm.jpg" alt="Ajax Alarm System with sensors" loading="lazy" />
@@ -85,7 +92,9 @@
         <div class="alarmsystem-page-info-item">
             <div class="alarmsystem-page-info-text">
                 <h2>DSC Alarm Systems</h2>
-                <p>DSC (Digital Security Controls) is known for reliable, scalable wired and wireless security systems. Perfect for homes and offices, DSC panels are compatible with automation and monitoring platforms for complete protection.</p>
+                <p>DSC (Digital Security Controls) is known for reliable, scalable wired and wireless security systems.
+                    Perfect for homes and offices, DSC panels are compatible with automation and monitoring platforms
+                    for complete protection.</p>
             </div>
             <div class="alarmsystem-page-info-image">
                 <img src="../images/DSC alarm.jpg" alt="DSC Alarm System hardware" loading="lazy" />
@@ -95,7 +104,9 @@
         <div class="alarmsystem-page-info-item">
             <div class="alarmsystem-page-info-text">
                 <h2>Paradox Alarm Systems</h2>
-                <p>Paradox offers flexible alarm solutions with hybrid wired/wireless options. Their MG and SP series are suitable for both residential and commercial installations, with mobile app integration and customizable expansion modules.</p>
+                <p>Paradox offers flexible alarm solutions with hybrid wired/wireless options. Their MG and SP series
+                    are suitable for both residential and commercial installations, with mobile app integration and
+                    customizable expansion modules.</p>
             </div>
             <div class="alarmsystem-page-info-image">
                 <img src="../images/PARADOX ALarm.jpg" alt="Paradox Alarm System panel" loading="lazy" />
@@ -105,10 +116,13 @@
         <div class="alarmsystem-page-info-item">
             <div class="alarmsystem-page-info-text">
                 <h2>Bosch & Risco Alarm Systems</h2>
-                <p>Bosch 2000/3000 series and Risco systems are trusted in high-security environments. These solutions support advanced automation, remote monitoring, and robust alarm management—ideal for commercial sites and large-scale facilities.</p>
+                <p>Bosch 2000/3000 series and Risco systems are trusted in high-security environments. These solutions
+                    support advanced automation, remote monitoring, and robust alarm management—ideal for commercial
+                    sites and large-scale facilities.</p>
             </div>
             <div class="alarmsystem-page-info-image">
-                <img src="../images/RISCO alarm.jpg" alt="Bosch and Risco Alarm Systems in commercial environment" loading="lazy" />
+                <img src="../images/RISCO alarm.jpg" alt="Bosch and Risco Alarm Systems in commercial environment"
+                    loading="lazy" />
             </div>
         </div>
     </section>
@@ -140,14 +154,19 @@
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
-                    <a href="https://twitter.com" title="Follow us on Twitter" target="_blank" rel="noopener"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://linkedin.com" title="Follow us on LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Follow us on Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" title="Follow us on Twitter" target="_blank" rel="noopener"><i
+                            class="fab fa-x-twitter"></i></a>
+                    <a href="https://linkedin.com" title="Follow us on LinkedIn" target="_blank" rel="noopener"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Follow us on Facebook" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-
+    <div class="footer-company-text">
+        <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
+    </div>
     <script src="../js/main.js"></script>
 </body>
 
