--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,8 @@
     <title>Contact Us | Swin Security</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Get in touch with Swin Security for expert advice, support, and customized security solutions. We're here to help." />
+    <meta name="description"
+        content="Get in touch with Swin Security for expert advice, support, and customized security solutions. We're here to help." />
 
     <!-- Open Graph Meta -->
     <meta property="og:title" content="Contact Swin Security" />
@@ -19,8 +20,10 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Contact Swin Security" />
-    <meta name="twitter:description" content="Need help? Reach out to Swin Security for tailored support and service." />
-    <meta name="twitter:image" content="https://media.istockphoto.com/id/613225608/photo/customer-service-support.jpg" />
+    <meta name="twitter:description"
+        content="Need help? Reach out to Swin Security for tailored support and service." />
+    <meta name="twitter:image"
+        content="https://media.istockphoto.com/id/613225608/photo/customer-service-support.jpg" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -39,9 +42,11 @@
             <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i></a>
+                <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"><i
+                        class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a>
+                    </li>
                     <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
                     <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
                     <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
@@ -66,7 +71,8 @@
                         <i class="fas fa-phone-alt contact-page-info-icon" aria-hidden="true"></i>
                         <div class="contact-page-info-details">
                             <h3 class="contact-page-info-title">Emergency Support</h3>
-                            <a href="tel:+1234567890" class="contact-page-info-link" aria-label="Call emergency support">+1 (234) 567-890</a>
+                            <a href="tel:+1234567890" class="contact-page-info-link"
+                                aria-label="Call emergency support">+1 (234) 567-890</a>
                         </div>
                     </div>
 
@@ -74,7 +80,8 @@
                         <i class="fas fa-envelope contact-page-info-icon" aria-hidden="true"></i>
                         <div class="contact-page-info-details">
                             <h3 class="contact-page-info-title">Email Address</h3>
-                            <a href="mailto:support@security.com" class="contact-page-info-link" aria-label="Send an email to support">support@security.com</a>
+                            <a href="mailto:support@security.com" class="contact-page-info-link"
+                                aria-label="Send an email to support">support@security.com</a>
                         </div>
                     </div>
 
@@ -92,7 +99,8 @@
             </div>
             <div class="contact-page-hero-image">
                 <img src="https://media.istockphoto.com/id/613225608/photo/customer-service-support.jpg?s=612x612&w=0&k=20&c=8EfYiSY8HwsmRpiaeYLLt4H2rn5gpyMUbpQC1Q18lZQ="
-                    alt="Customer support representative at Swin Security" class="contact-page-hero-img" loading="lazy" />
+                    alt="Customer support representative at Swin Security" class="contact-page-hero-img"
+                    loading="lazy" />
             </div>
         </div>
     </section>
@@ -124,14 +132,19 @@
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
-                    <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i
+                            class="fab fa-x-twitter"></i></a>
+                    <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-
+    <div class="footer-company-text">
+        <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
+    </div>
     <script src="../js/main.js"></script>
 </body>
 
