--- a/pages/smarthome.html
+++ b/pages/smarthome.html
@@ -2,129 +2,140 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Smart Home Automation & Security | Swin Security</title>
-  <meta name="description" content="Upgrade your lifestyle with Swin Security's smart home systems including video doorbells, automation, and keyless smart locks for enhanced safety and convenience." />
+    <title>Smart Home Automation & Security | Swin Security</title>
+    <meta name="description"
+        content="Upgrade your lifestyle with Swin Security's smart home systems including video doorbells, automation, and keyless smart locks for enhanced safety and convenience." />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Smart Home Automation & Security | Swin Security" />
-  <meta property="og:description" content="Discover innovative smart home solutions with Swin Security. Control locks, monitor entry, and automate your environment." />
-  <meta property="og:image" content="https://media.istockphoto.com/id/469411262/photo/mobile-phone-controls-the-door-lock-at-home.jpg" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/pages/smarthome.html" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Smart Home Automation & Security | Swin Security" />
+    <meta property="og:description"
+        content="Discover innovative smart home solutions with Swin Security. Control locks, monitor entry, and automate your environment." />
+    <meta property="og:image"
+        content="https://media.istockphoto.com/id/469411262/photo/mobile-phone-controls-the-door-lock-at-home.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/pages/smarthome.html" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Smart Home Automation & Security | Swin Security" />
-  <meta name="twitter:description" content="Control your smart home with ease using Swin Security's integrated systems for safety and automation." />
-  <meta name="twitter:image" content="https://media.istockphoto.com/id/469411262/photo/mobile-phone-controls-the-door-lock-at-home.jpg" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Smart Home Automation & Security | Swin Security" />
+    <meta name="twitter:description"
+        content="Control your smart home with ease using Swin Security's integrated systems for safety and automation." />
+    <meta name="twitter:image"
+        content="https://media.istockphoto.com/id/469411262/photo/mobile-phone-controls-the-door-lock-at-home.jpg" />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="../css/critical.css" />
-  <link rel="stylesheet" href="../css/style.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/critical.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
-  <nav class="navbar" role="navigation" aria-label="Main navigation">
-    <div class="logo">
-      <img src="../images/Swin_security.webp" alt="Swin Security Logo" height="60" loading="lazy" />
-    </div>
-
-    <ul class="nav-links">
-      <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-          <i class="fas fa-cogs"></i>Our Solutions <i class="fas fa-chevron-down"></i>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
-          <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
-          <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
-          <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
-          <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
-        </ul>
-      </li>
-      <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-    </ul>
-
-    <i class="fas fa-bars hamburger" aria-label="Open navigation menu"></i>
-  </nav>
-
-  <section class="smarthome-page">
-    <div class="smarthome-hero">
-      <i class="fas fa-home" aria-hidden="true"></i>
-      <h1>Smart Home</h1>
-      <p>Transform your home with integrated security and automation for ultimate convenience and safety.</p>
-    </div>
-
-    <div class="smarthome-features">
-      <div class="smarthome-feature-card">
-        <img src="https://media.istockphoto.com/id/469411262/photo/mobile-phone-controls-the-door-lock-at-home.jpg?s=612x612&w=0&k=20&c=EjpF4BrD57LJleHXOSFBoxm_LAR89ANSt-eJm2rdT5A=" 
-             alt="User controlling smart door lock from phone" loading="lazy" />
-        <h3>Smart Locks</h3>
-        <p>Control access to your home with keyless entry and remote locking.</p>
-        <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
-      </div>
-
-      <div class="smarthome-feature-card">
-        <img src="https://media.istockphoto.com/id/1954865202/video/intercom-screen-of-door-peephole-surveillance-camera-on-entrance-door.avif?s=640x640&k=20&c=mF2YcRTrlSN_-76fZvwoTmK1mEgBfCWtr9gfSE1YbeY=" 
-             alt="Smart video doorbell surveillance screen" loading="lazy" />
-        <h3>Video Doorbells</h3>
-        <p>Monitor your doorstep with HD video and two-way communication.</p>
-        <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
-      </div>
-
-      <div class="smarthome-feature-card">
-        <img src="https://media.istockphoto.com/id/1329913473/photo/smart-home-mobile-phone-control.jpg?s=612x612&w=0&k=20&c=YQKWgUl3C0GmVW8LoEe9EDQvzdus_UEUVSROpkVYc2A=" 
-             alt="Smartphone controlling smart home lighting and temperature" loading="lazy" />
-        <h3>Home Automation</h3>
-        <p>Integrate lighting, climate, and security for a fully automated home.</p>
-        <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
-      </div>
-    </div>
-  </section>
-
-  <footer class="footer-section" role="contentinfo">
-    <div class="footer-container">
-      <!-- Company Info -->
-      <div class="footer-column">
-        <h3>Swin Security</h3>
-        <p>Protecting your world with cutting-edge security solutions.</p>
-        <p>Email: <a href="mailto:info@swinsecurity.com">info@swinsecurity.com</a></p>
-        <p>Phone: <a href="tel:+18001234567">+1 (800) 123-4567</a></p>
-        <p>Address: 123 Secure St, Safety City, SC 12345</p>
-      </div>
-
-      <!-- Quick Links -->
-      <div class="footer-column">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../index.html#ourSolution">Our Solutions</a></li>
-          <li><a href="../index.html#whyUs">Why Choose Us</a></li>
-          <li><a href="../index.html#ourPartners">Technology Partners</a></li>
-          <li><a href="./contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-
-      <!-- Social Media -->
-      <div class="footer-column">
-        <h3>Follow Us</h3>
-        <div class="footer-social">
-          <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i class="fab fa-x-twitter"></i></a>
-          <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
-          <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+    <nav class="navbar" role="navigation" aria-label="Main navigation">
+        <div class="logo">
+            <img src="../images/Swin_security.webp" alt="Swin Security Logo" height="60" loading="lazy" />
         </div>
-      </div>
-    </div>
-  </footer>
 
-  <script src="../js/main.js"></script>
+        <ul class="nav-links">
+            <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-cogs"></i>Our Solutions <i class="fas fa-chevron-down"></i>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a>
+                    </li>
+                    <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
+                    <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
+                    <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
+                    <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
+                </ul>
+            </li>
+            <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+        </ul>
+
+        <i class="fas fa-bars hamburger" aria-label="Open navigation menu"></i>
+    </nav>
+
+    <section class="smarthome-page">
+        <div class="smarthome-hero">
+            <i class="fas fa-home" aria-hidden="true"></i>
+            <h1>Smart Home</h1>
+            <p>Transform your home with integrated security and automation for ultimate convenience and safety.</p>
+        </div>
+
+        <div class="smarthome-features">
+            <div class="smarthome-feature-card">
+                <img src="https://media.istockphoto.com/id/469411262/photo/mobile-phone-controls-the-door-lock-at-home.jpg?s=612x612&w=0&k=20&c=EjpF4BrD57LJleHXOSFBoxm_LAR89ANSt-eJm2rdT5A="
+                    alt="User controlling smart door lock from phone" loading="lazy" />
+                <h3>Smart Locks</h3>
+                <p>Control access to your home with keyless entry and remote locking.</p>
+                <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
+            </div>
+
+            <div class="smarthome-feature-card">
+                <img src="https://media.istockphoto.com/id/1954865202/video/intercom-screen-of-door-peephole-surveillance-camera-on-entrance-door.avif?s=640x640&k=20&c=mF2YcRTrlSN_-76fZvwoTmK1mEgBfCWtr9gfSE1YbeY="
+                    alt="Smart video doorbell surveillance screen" loading="lazy" />
+                <h3>Video Doorbells</h3>
+                <p>Monitor your doorstep with HD video and two-way communication.</p>
+                <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
+            </div>
+
+            <div class="smarthome-feature-card">
+                <img src="https://media.istockphoto.com/id/1329913473/photo/smart-home-mobile-phone-control.jpg?s=612x612&w=0&k=20&c=YQKWgUl3C0GmVW8LoEe9EDQvzdus_UEUVSROpkVYc2A="
+                    alt="Smartphone controlling smart home lighting and temperature" loading="lazy" />
+                <h3>Home Automation</h3>
+                <p>Integrate lighting, climate, and security for a fully automated home.</p>
+                <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-section" role="contentinfo">
+        <div class="footer-container">
+            <!-- Company Info -->
+            <div class="footer-column">
+                <h3>Swin Security</h3>
+                <p>Protecting your world with cutting-edge security solutions.</p>
+                <p>Email: <a href="mailto:info@swinsecurity.com">info@swinsecurity.com</a></p>
+                <p>Phone: <a href="tel:+18001234567">+1 (800) 123-4567</a></p>
+                <p>Address: 123 Secure St, Safety City, SC 12345</p>
+            </div>
+
+            <!-- Quick Links -->
+            <div class="footer-column">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../index.html#ourSolution">Our Solutions</a></li>
+                    <li><a href="../index.html#whyUs">Why Choose Us</a></li>
+                    <li><a href="../index.html#ourPartners">Technology Partners</a></li>
+                    <li><a href="./contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <!-- Social Media -->
+            <div class="footer-column">
+                <h3>Follow Us</h3>
+                <div class="footer-social">
+                    <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i
+                            class="fab fa-x-twitter"></i></a>
+                    <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="footer-company-text">
+        <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
+    </div>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
