--- a/pages/accesscontrol.html
+++ b/pages/accesscontrol.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Access Control Systems | Swin Security</title>
-    
+
     <!-- SEO Meta -->
-    <meta name="description" content="Discover advanced access control systems by Swin Security. Scalable, secure, and integrated solutions for modern security needs.">
+    <meta name="description"
+        content="Discover advanced access control systems by Swin Security. Scalable, secure, and integrated solutions for modern security needs.">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Top Access Control Systems | Swin Security">
-    <meta property="og:description" content="Secure your property with our cutting-edge access control systems. Easy integration and remote monitoring.">
+    <meta property="og:description"
+        content="Secure your property with our cutting-edge access control systems. Easy integration and remote monitoring.">
     <meta property="og:image" content="https://yoursite.com/images/access-control.jpg">
     <meta property="og:url" content="https://yoursite.com/pages/accesscontrol.html">
     <meta property="og:type" content="website">
@@ -19,7 +21,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Top Access Control Systems | Swin Security">
-    <meta name="twitter:description" content="Discover AI-powered access control. Scalable and secure solutions for your property.">
+    <meta name="twitter:description"
+        content="Discover AI-powered access control. Scalable and secure solutions for your property.">
     <meta name="twitter:image" content="https://yoursite.com/images/access-control.jpg">
 
     <!-- Stylesheets -->
@@ -45,7 +48,8 @@
                     <i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a>
+                    </li>
                     <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
                     <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
                     <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
@@ -63,7 +67,8 @@
         <div class="access-control-hero">
             <i class="fas fa-lock"></i>
             <h1>Top Access Control Systems</h1>
-            <p>We provide the latest and most secure access control systems to meet your security needs. Partnering with trusted brands to deliver scalable and reliable solutions.</p>
+            <p>We provide the latest and most secure access control systems to meet your security needs. Partnering with
+                trusted brands to deliver scalable and reliable solutions.</p>
         </div>
 
         <!-- Feature Cards -->
@@ -72,21 +77,24 @@
                 <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s="
                     alt="AI-enabled security camera in surveillance setup" loading="lazy">
                 <h2>Advanced Security</h2>
-                <p>Our access control systems offer the latest in security technology, protecting your assets with robust encryption and reliable authentication methods.</p>
+                <p>Our access control systems offer the latest in security technology, protecting your assets with
+                    robust encryption and reliable authentication methods.</p>
                 <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
             </div>
             <div class="access-control-feature-card">
                 <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k="
                     alt="AI analytics integration and cloud dashboard" loading="lazy">
                 <h2>Easy Integration</h2>
-                <p>Seamlessly integrate with your existing infrastructure, ensuring that your access control system fits perfectly within your security setup.</p>
+                <p>Seamlessly integrate with your existing infrastructure, ensuring that your access control system fits
+                    perfectly within your security setup.</p>
                 <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
             </div>
             <div class="access-control-feature-card">
                 <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s="
                     alt="Cloud-based access control interface" loading="lazy">
                 <h2>Remote Access</h2>
-                <p>Control and monitor your access control systems remotely, providing you with flexibility and control from anywhere in the world.</p>
+                <p>Control and monitor your access control systems remotely, providing you with flexibility and control
+                    from anywhere in the world.</p>
                 <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
             </div>
         </div>
@@ -120,14 +128,19 @@
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
-                    <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i
+                            class="fab fa-x-twitter"></i></a>
+                    <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-
+    <div class="footer-company-text">
+        <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
+    </div>
     <!-- JS -->
     <script src="../js/main.js"></script>
 </body>
