--- a/pages/aisurveillance.html
+++ b/pages/aisurveillance.html
@@ -4,18 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Enhance your security with AI-powered surveillance systems. Real-time monitoring, intelligent threat detection, and cloud integration by Swin Security.">
+    <meta name="description"
+        content="Enhance your security with AI-powered surveillance systems. Real-time monitoring, intelligent threat detection, and cloud integration by Swin Security.">
     <meta property="og:title" content="AI Surveillance - SwinSecurity">
-    <meta property="og:description" content="Harness the power of AI to enhance security with smart cameras, real-time analytics, and cloud integration for seamless surveillance.">
+    <meta property="og:description"
+        content="Harness the power of AI to enhance security with smart cameras, real-time analytics, and cloud integration for seamless surveillance.">
     <meta property="og:image" content="https://yoursite.com/images/ai-surveillance.jpg">
     <meta property="og:url" content="https://yoursite.com/pages/aisurveillance.html">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="AI Surveillance - SwinSecurity">
-    <meta name="twitter:description" content="AI-powered surveillance solutions for real-time threat detection and seamless cloud integration.">
+    <meta name="twitter:description"
+        content="AI-powered surveillance solutions for real-time threat detection and seamless cloud integration.">
     <meta name="twitter:image" content="https://yoursite.com/images/ai-surveillance.jpg">
 
     <title>AI Surveillance - SwinSecurity</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/critical.css">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -32,9 +37,11 @@
                 <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cogs"></i>Our Solutions <i class="fas fa-chevron-down"></i></a>
+                    <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"><i
+                            class="fas fa-cogs"></i>Our Solutions <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                        <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate
+                                Automation</a></li>
                         <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
                         <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
                         <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
@@ -53,23 +60,27 @@
             <div class="aisurveillance-hero">
                 <i class="fas fa-camera" aria-hidden="true"></i>
                 <h1>AI Surveillance</h1>
-                <p>Harness the power of artificial intelligence to enhance security with real-time monitoring and intelligent threat detection.</p>
+                <p>Harness the power of artificial intelligence to enhance security with real-time monitoring and
+                    intelligent threat detection.</p>
             </div>
             <div class="aisurveillance-features">
                 <div class="aisurveillance-feature-card">
-                    <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s=" alt="AI Camera with facial recognition and motion tracking">
+                    <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s="
+                        alt="AI Camera with facial recognition and motion tracking">
                     <h2>Smart Cameras</h2>
                     <p>Advanced cameras with facial recognition and motion tracking for precise monitoring.</p>
                     <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
                 </div>
                 <div class="aisurveillance-feature-card">
-                    <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k=" alt="Real-time AI analytics with data processing">
+                    <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k="
+                        alt="Real-time AI analytics with data processing">
                     <h2>Real-Time Analytics</h2>
                     <p>Instant data processing to detect anomalies and alert security teams.</p>
                     <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
                 </div>
                 <div class="aisurveillance-feature-card">
-                    <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s=" alt="Cloud integration for video footage storage">
+                    <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s="
+                        alt="Cloud integration for video footage storage">
                     <h2>Cloud Integration</h2>
                     <p>Seamless cloud storage for secure, accessible footage anytime, anywhere.</p>
                     <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
@@ -102,14 +113,19 @@
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
-                    <a href="https://twitter.com" title="Follow us on Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
-                    <a href="https://linkedin.com" title="Follow us on LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Follow us on Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" title="Follow us on Twitter" target="_blank" rel="noopener"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="https://linkedin.com" title="Follow us on LinkedIn" target="_blank" rel="noopener"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Follow us on Facebook" target="_blank" rel="noopener"><i
+                            class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-
+    <div class="footer-company-text">
+        <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
+    </div>
     <script src="../js/main.js"></script>
 </body>
 
